# semantic-layer-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  build_final.py  build_graphrag.py  build_nov2025.py  build_october.py  build_phase1.py  build_phase2.py  build_remaining.py  build_strategic.py  build_visionary.py  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml  k8s-deployment.yaml  security-policy.yaml
deploy/terraform/: main.tf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT_AT_SCALE.md  MIGRATION.md  MULTI_CLOUD_AND_ML_SCALE.md  USER_GUIDE.md
examples/: advanced_usage.py  queries.py
scripts/: generate_history.py
semantic_layer/: __init__.py
semantic_layer/actions/: trigger.py
semantic_layer/advanced/: federation.py  materialization.py
semantic_layer/agent/: analyst.py
semantic_layer/ai/: query_suggestions.py  schema_designer.py
semantic_layer/api/: feature_29.py  feature_30.py  feature_31.py  feature_32.py  feature_33.py  feature_34.py  feature_35.py  feature_36.py  feature_37.py  feature_38.py  feature_39.py  feature_40.py  main.py  models.py
semantic_layer/cache/: predictive.py  redis_cache.py  semantic_cache.py  smart_cache.py
semantic_layer/cli/: main.py
semantic_layer/collaboration/: annotations.py
semantic_layer/compiler/: filters.py  query.py  query_compiler.py  sql_compiler.py
semantic_layer/connectors/: base.py  duckdb.py  postgres.py
semantic_layer/core/: schema.py
semantic_layer/federation/: mesh.py
semantic_layer/governance/: catalog.py  dependencies.py  lineage.py  multitenancy.py  row_security.py  versioning.py
tests/: benchmarks.py  test_compiler.py  test_integration.py  test_schema.py  verify_setup.py
(+44 files in other folders)
