[tool.poetry]
name = "semantic-layer-llm"
version = "0.1.0"
description = "A Semantic Layer for LLMs with Machine Learning capabilities"
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
packages = [{include = "semantic_layer"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
duckdb = "^0.8.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
openai = "^1.0.0"
pyyaml = "^6.0"
strawberry-graphql = "^0.196.0"
redis = "^5.0.0"
celery = "^5.3.0"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
