[tool.poetry]
name = "semantic-layer"
version = "0.1.0"
description = "Semantic Layer for LLMs"
authors = ["Dev Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
pandas = "^2.0.0"
duckdb = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
