[tool.poetry]
name = "semantic-layer"
version = "0.1.0"
description = "Semantic Layer for LLMs"
authors = ["Dev Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
pandas = "^2.0.0"
duckdb = "^0.8.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
\nscikit-learn = "^1.3.0"\nnumpy = "^1.24.0"\n